# lang-classifier

./: .gitignore  README.md  config.json  main.py  pyproject.toml
data/papluca___language-identification/default/0.0.0/aa56583bf2bc52b0565770607d6fc3faebecf9e2/: dataset_info.json  language-identification-test.arrow  language-identification-validation.arrow
src/: config.py  dataset.py  download.py  evaluate.py  load_model.py  model.py  predict.py  train.py
